--- a/.gitignore
+++ b/.gitignore
@@ -46,4 +46,7 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 
+# Server Config
+.htaccess
+
 # Created by .ignore support plugin (hsz.mobi)
