--- a/nateeubanksREST/build.gradle
+++ b/nateeubanksREST/build.gradle
@@ -10,7 +10,7 @@ group = 'com.nateeubanks'
 version = '0.0.1-SNAPSHOT'
 
 ext {
-  springVersion = "4.2.9.RELEASE"
+  springVersion = "4.3.20.RELEASE"
 }
 
 sourceCompatibility = 1.8
@@ -37,7 +37,7 @@ dependencies {
 
 	compile project(':nateeubanksJPA')
 	
-	compile group: 'org.springframework.security', name: 'spring-security-core', version: "$springVersion"
+	compile group: 'org.springframework.security', name: 'spring-security-core', version: "4.2.9.RELEASE"
     compile group: 'org.springframework', name: 'spring-webmvc', version:"$springVersion"
     compile group: 'org.springframework', name: 'spring-orm', version:"$springVersion"
     compile "org.springframework:spring-test:$springVersion"
