--- a/nateeubanksREST/gradle/wrapper/gradle-wrapper.properties
+++ b/nateeubanksREST/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,6 @@
+#Mon Nov 18 21:58:28 PST 2019
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.3-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.3-bin.zip
+zipStoreBase=GRADLE_USER_HOME
